# twjobs

./: pyproject.toml
core/: paginations.py
jobs/: filters.py  models.py  serializers.py  urls.py  views.py
jobs/migrations/: 0001_initial.py
setup/: settings.py  urls.py
skills/: models.py  serializers.py  urls.py  views.py
skills/migrations/: 0001_initial.py
