[tool.poetry]
name = "drf-estudos"
version = "0.1.0"
description = ""
authors = ["FelipeHardmann <fashardmann@gmail.com>"]
readme = "README.md"
packages = [{include = "drf_estudos"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.15"
black = "^24.3.0"
python-decouple = "^3.8"
dj-database-url = "^2.1.0"
mysqlclient = "^2.2.0"
djangorestframework = "^3.15.2"
django-filter = "^23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
